--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ streamlit-drawable-canvas
 pyyaml
 tqdm
 easydict==1.9.0
-scikit-image==0.17.2
+scikit-image
 scikit-learn==0.24.2
 opencv-python
 tensorflow
