--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy
 opencv-python-headless
 matplotlib
 streamlit
-streamlit-drawable-canvas
+streamlit-drawable-canvas==0.8.0
 pyyaml
 tqdm
 easydict==1.9.0
